--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 ---
 permalink: /404.html
-layout: default
+layout: plain
 ---
 
 <style type="text/css" media="screen">
@@ -21,5 +21,6 @@ layout: default
   <h1>404</h1>
 
   <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <p>The link you followed may be outdated.</p>
+  <p>But you can visit <a href="{{ site.url }}" style="text-decoration: underline;">BLOG HOME</a></p>
 </div>
