Post Update & 404 home link update

--- a/404.html
+++ b/404.html
@@ -22,5 +22,5 @@ layout: plain
 
   <p><strong>Page not found :(</strong></p>
   <p>The link you followed may be outdated.</p>
-  <p>But you can visit <a href="{{ site.url }}" style="text-decoration: underline;">BLOG HOME</a></p>
+  <p>But you can visit <a href="/" style="text-decoration: underline;">BLOG HOME</a></p>
 </div>
